<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"

        app:layout_constraintEnd_toStartOf="@+id/home_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:enabled="false"

        app:layout_constraintEnd_toStartOf="@+id/details_button"
        app:layout_constraintStart_toEndOf="@+id/logo_image"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/details_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/home_button"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/home_button"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/home_button"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="25dp">

        <EditText
            android:id="@+id/search_query_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
             />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/game_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_below="@id/search_layout"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_layout"
        >

    </androidx.recyclerview.widget.RecyclerView>


</androidx.constraintlayout.widget.ConstraintLayout>